--- a/portfolio.html
+++ b/portfolio.html
@@ -45,28 +45,33 @@
                 <div class='row'>
                     <div class='column'>
                             <img class="portfolio-images" src="assets/images/OS-640.png" alt="Desk Top App">
-                            <div class="overlay">Desk Top App</div>
+                            <div class="overlay">Desk Top Apps</div>
                     </div>
                     <div class='column'>
                             <img class="portfolio-images" src="assets/images/charts-640.png" alt="Chart Image">
+                            <div class="overlay">Data Visualization</div>
                     </div>
                 </div>
 
                 <div class='row'>
                     <div class='column'>
                         <img class="portfolio-images" src="assets/images/tablet-health-640.png" alt="Health App">
+                        <div class="overlay">Health And Wellness</div>
                     </div>
                     <div class='column'>
                         <img class="portfolio-images" src="assets/images/tablet-science-640.png" alt="Science App">
+                        <div class="overlay">STEM Apps</div>
                     </div>
                 </div>
 
                 <div class='row'>
                     <div class='column'>
-                        <img class="portfolio-images" src="assets/images/Social-Media-640.jpg" alt="Social Media App">
+                        <img class="portfolio-images" src="assets/images/Social-Media-640.png" alt="Social Media App">
+                        <div class="overlay">Social Media</div>
                     </div>
                     <div class='column'>
                         <img class="portfolio-images" src="assets/images/QR-640.png" alt="QR Code Reader">
+                        <div class="overlay">QR Code Reader</div>
                     </div>
                 </div>
 
