--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        
-        <div id="filler-top-left"></div>
+        <div class="top-filler filler-pattern"></div>
+        <div id="filler-top-left" class="filler-pattern"></div>
         <header>
             <h1 id="my-name">Brian Widgeon</h1>
             <nav>
@@ -19,7 +19,7 @@
                 <a href="contact.html" class="nav-links" id="contact"><strong><u>Contact</u></strong></a>
             </nav>
         </header>
-        <div id="filler-top-right"></div>
+        <div id="filler-top-right" class="filler-pattern"></div>
 
         <div class="filler-pattern"></div>   
 
@@ -66,6 +66,7 @@
             Why does Snoop Dog like my footer??? 🤔  Because it's STICKY ICKY ICKY!!! 🤣
         </footer>
         <div id="filler-bottom-right" class="filler-pattern"></div>
+        <div class="bottom-filler filler-pattern"></div>
 
 
     </div>
