--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 
                 <div class='row'>
                     <div class='column'>
-                            <img class="portfolio-images" src="assets/images/OS-640.png" alt="Desk Top App">
+                            <img class="portfolio-images" src="assets/images/desk-top.png" alt="Desk Top App">
                             <a href="#" class="overlay">Desk Top Apps</a>
                     </div>
                     <div class='column'>
@@ -54,8 +54,8 @@
                         <a href="#" class="overlay">Health And Wellness</a>
                     </div>
                     <div class='column'>
-                        <img class="portfolio-images" src="assets/images/tablet-science-640.png" alt="Science App">
-                        <a href="#" class="overlay">STEM Apps</a>
+                        <img class="portfolio-images" src="assets/images/cyber-stuff.png" alt="Super Tech">
+                        <a href="#" class="overlay">Super Tech</a>
                     </div>
                 </div>
 
@@ -65,8 +65,8 @@
                         <a href="#" class="overlay">Social Media</a>
                     </div>
                     <div class='column'>
-                        <img class="portfolio-images" src="assets/images/cyber-stuff.png" alt="Cyber Stuff">
-                        <a href="#" class="overlay">Super Tech</a>
+                        <img class="portfolio-images" src="assets/images/tablet-science-640.png" alt="Stem Apps">
+                        <a href="#" class="overlay">STEM Apps</a>
                     </div>
                 </div>
 
