--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="top-filler filler-pattern"></div>
-        <div id="filler-top-left" class="filler-pattern"></div>
+        <div class="filler-top-left filler-pattern"></div>
         <header>
             <h1 id="my-name">Brian Widgeon</h1>
             <nav>
@@ -19,11 +19,11 @@
                 <a href="contact.html" class="nav-links" id="contact"><strong><u>Contact</u></strong></a>
             </nav>
         </header>
-        <div id="filler-top-right" class="filler-pattern"></div>
+        <div class="filler-top-right filler-pattern"></div>
 
         <div class="filler-pattern"></div>   
 
-        <div id="form-container">
+        <div class="form-container">
 
             <h1 id="contact-header">Contact</h1>
 
@@ -61,11 +61,11 @@
 
         <div class="filler-pattern"></div>
         
-        <div id="filler-bottom-left" class="filler-pattern"></div>
+        <div class="filler-bottom-left filler-pattern"></div>
         <footer>
             Why does Snoop Dog like my footer??? 🤔  Because it's STICKY ICKY ICKY!!! 🤣
         </footer>
-        <div id="filler-bottom-right" class="filler-pattern"></div>
+        <div class="filler-bottom-right filler-pattern"></div>
         <div class="bottom-filler filler-pattern"></div>
 
 
